# blitz-dashboard

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cleanup.sh  deny.toml  nginx.conf  rustfmt.toml  trainer.service
.cargo/: config
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  check.yml  cross.yml  publish.yml  security-audit.yml
src/: .gitattributes  aggregator.rs  api.rs  backoff.rs  battle_stream.rs  cached.rs  cf.rs  convert.rs  crawler.rs  database.rs  database.sql  export_stream.rs  helpers.rs  logging.rs  main.rs  math.rs  metrics.rs  models.rs  oh_my_std.rs  opts.rs  prelude.rs  redis.rs  serde.rs  statistics.rs  tankopedia.json  tankopedia.rs  test_replay.rs  thirdparty.rs  time.rs  trainer.rs  wargaming.rs  web.rs
src/aggregator/: dataset.rs  models.rs  persistence.rs  redis.rs  sample_point.rs  stream.rs  stream_entry.rs
src/api/: middleware.rs  wargaming.rs
src/api/wargaming/: models.rs
src/battle_stream/: entry.rs  stream.rs
src/crawler/: README.md  account_stream.rs  batch_stream.rs  crawled_data.rs  metrics.rs  next_check_at.rs  sample_stream.rs  selector.rs
src/database/: models.rs  mongodb.rs  script.sql
src/database/mongodb/: models.rs  options.rs  traits.rs
src/database/mongodb/models/: account.rs  account_entry.rs  account_snapshot.rs  deprecated_rating_snapshot.rs  rating_snapshot.rs  root.rs  statistics_snapshot.rs  stats.rs  stats_snapshots.rs  tank_last_battle_time.rs  tank_snapshot.rs  train_item.rs  vehicle_model.rs
src/database/mongodb/models/account/: id_projection.rs  partial_tank_stats.rs  random.rs  rating.rs  tank_last_battle_time.rs
src/database/mongodb/models/stats/: random.rs  rating.rs  traits.rs
src/database/mongodb/models/train_item/: aggregation.rs  vehicle_stats.rs
src/helpers/: average.rs  backoff.rs  compression.rs  hash.rs  logging.rs  miniz_oxide.rs  periodic.rs  redis.rs  result.rs  sentry.rs  serde.rs  throttler.rs  time.rs  tracing.rs
src/math/: statistics.rs  traits.rs  vector.rs  z_level.rs
src/opts/: parsers.rs
src/tankopedia/: .gitattributes  generated.rs  tankopedia.json
src/trainer/: api.rs  attributes.rs  battle.rs  cache.rs  cf.rs  client.rs  dataset.rs  error.rs  learning_rate.rs  loss.rs  math.rs  model.rs  recommender.rs  regression.rs  request.rs  requests.rs  responses.rs  sample.rs  sample_point.rs  stream_entry.rs  train_item.rs  vector.rs
src/wargaming/: middleware.rs  models.rs  response.rs  tank_id.rs
src/wargaming/cache/: account.rs
src/wargaming/cache/account/: info.rs  search.rs  tanks.rs
src/wargaming/models/: account_id.rs  account_info.rs  mm_rating.rs  nation.rs  realm.rs  statistics.rs  tank.rs  tank_achievements.rs  tank_id.rs  tank_statistics.rs  tank_stats.rs  vehicle.rs
src/web/: cache.rs  components.rs  cookies.rs  error.rs  errors.rs  fairings.rs  helpers.rs  i18n.rs  index.rs  logging.rs  middleware.rs  models.rs  monitoring.rs  partials.rs  player.rs  realm.rs  responders.rs  response.rs  responses.rs  result.rs  routes.rs  state.rs  test.rs  tracking_code.rs  utils.rs  views.rs
src/web/cache/: analytics.rs
src/web/components/: footer.rs
src/web/i18n/: en.ftl  ru.ftl
src/web/index/: model.rs  models.rs  view.rs
src/web/middleware/: error.rs  security_headers.rs  sentry.rs  timeit.rs
src/web/models/: index.rs  player.rs
src/web/partials/: account_search.rs  cdf_semaphore.rs  classes.rs  float.rs  footer.rs  human_float.rs  semaphore.rs
src/web/player/: model.rs  models.rs  view.rs
src/web/responses/: error.rs  static.rs
src/web/responses/static/: site.webmanifest
src/web/routes/: index.rs  player.rs  random.rs  search.rs  static.rs  status.rs
src/web/routes/player/: models.rs  partials.rs  view.rs
src/web/routes/search/: models.rs  view.rs
src/web/routes/static/: player.js  robots.txt  table.js  theme.css
src/web/routes/status/: vehicle.rs
src/web/search/: models.rs  view.rs
src/web/views/: account.rs  analytics.rs  api.rs  bulma.rs  error.rs  errors.rs  gone.rs  index.rs  player.rs  random.rs  search.rs  sitemaps.rs  static.rs  status.rs  user.rs  vehicle.rs
src/web/views/analytics/: vehicle.rs
src/web/views/player/: confidence_level.rs  damage_item.rs  display_preferences.rs  interval_item.rs  models.rs  params.rs  partials.rs  path.rs  percentage.rs  percentage_item.rs  stats_delta.rs  target_victory_ratio.rs  testers.rs  view_constants.rs  view_model.rs
src/web/views/player/models/: params.rs  path.rs  stats_delta.rs  view_model.rs
src/web/views/search/: models.rs
src/web/views/static/: bulma-prefers-dark.css  navbar.js  robots.txt  theme.css
src/web/views/status/: vehicle.rs
