[package]
name = "blitz-dashboard"
version = "0.0.0"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2021"
description = "World of Tanks Blitz player's web dashboard"
license-file = "LICENSE"
repository = "https://github.com/eigenein/blitz-dashboard"
homepage = "https://yastati.st"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.56"
async-compression = { version = "0.3.14", features = ["zstd"] }
chrono-humanize = "0.2.1"
fastrand = "1.7.0"
fred = { version = "5.0.0", default-features = false, features = ["partial-tracing"] }
humantime = "2.1.0"
itertools = "0.10.3"
jemallocator = "0.5.0"
maud = "0.23.0"
mongodb = { version = "2.2.2", features = ["zstd-compression", "bson-chrono-0_4"] }
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.4"
rmp-serde = "1.0.0"
rocket = "0.5.0-rc.1"
serde_json = "1.0.81"
structopt = { version = "0.3.25", default_features = false, features = ["color", "suggestions"] }
tracing = { version = "0.1.34", features = ["std"] }
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }

[dependencies.tokio]
version = "1.15.0"
features = ["rt-multi-thread", "time"]

[dependencies.futures]
version = "0.3.19"
default-features = false

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "deflate", "json"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.sentry]
version = "0.26.0"
default-features = false
features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "anyhow", "tracing"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "chrono"]

[dev-dependencies]
serde_json = "1.0.81"

[build-dependencies]
rustversion = "1.0.6"
