[package]
name = "blitz-dashboard"
version = "0.0.0"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2021"
description = "World of Tanks Blitz player's web dashboard"
license-file = "LICENSE"
repository = "https://github.com/eigenein/blitz-dashboard"
homepage = "https://yastati.st"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
ahash = "0.8.0"
anyhow = "1.0.56"
async-compression = { version = "0.3.14", features = ["zstd"] }
bpci = "0.1.0-beta.7"
chrono = { version = "0.4.19" }
chrono-humanize = "0.2.1"
circular-queue = "0.2.6"
clap = { version = "3.2.10", features = ["cargo", "derive", "env"] }
either = "1.6.1"
fastrand = "1.7.0"
fred = { version = "5.1.0", default-features = false, features = ["partial-tracing", "no-client-setname"] }
futures = { version = "0.3.21", default-features = false }
governor = "0.4.2"
human-repr = "1.0.1"
humantime = "2.1.0"
itertools = "0.10.3"
maud = "0.23.0"
mongodb = { version = "2.2.2", features = ["zstd-compression", "bson-chrono-0_4", "bson-serde_with"] }
num-traits = "0.2.15"
phf = { version = "0.11.0", features = ["macros"] }
poem = { version = "1.3.40", features = ["anyhow", "i18n", "cookie"] }
rand = "0.8.4"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
sentry = { version = "0.27.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "tracing"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = { version = "1.14.0", features = ["chrono"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "time"] }
tracing = { version = "0.1.34", features = ["std"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }

[dev-dependencies]
poem = { version = "1.3.40", features = ["test"], default-features = false }
serde_json = "1.0.81"
