[package]
name = "blitz-dashboard"
version = "0.0.0"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2021"
description = "World of Tanks Blitz player's web dashboard"
license-file = "LICENSE"
repository = "https://github.com/eigenein/blitz-dashboard"
homepage = "https://yastati.st"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
ahash = "0.8.0"
anyhow = "1.0.56"
async-compression = { version = "0.3.15", features = ["zstd"] }
async-trait = "0.1.58"
chrono = { version = "0.4.19" }
chrono-humanize = "0.2.1"
clap = { version = "4.0.18", features = ["cargo", "derive", "env"] }
either = "1.6.1"
fred = { version = "5.1.0", default-features = false, features = ["partial-tracing", "no-client-setname"] }
futures = { version = "0.3.21", default-features = false }
governor = "0.5.0"
human-repr = "1.0.1"
humantime = "2.1.0"
itertools = "0.10.3"
maud = "0.24.0"
mongodb = { version = "2.3.1", features = ["zstd-compression", "bson-chrono-0_4", "bson-serde_with"] }
num-traits = "0.2.15"
phf = { version = "0.11.0", features = ["macros"] }
poem = { version = "1.3.47", features = ["anyhow", "i18n", "cookie"] }
rand = "0.8.4"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
sentry = { version = "0.27.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "tracing", "anyhow"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_with = { version = "1.14.0", features = ["chrono"] }
statrs = "0.16.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "signal"] }
tracing = { version = "0.1.34", features = ["std"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }

[dev-dependencies]
poem = { version = "1.3.47", features = ["test"], default-features = false }
serde_json = "1.0.87"
